# Atmega328p-Cmake-EmptyProject

./: CMakeLists.txt
include/: stub.h
src/: main.c
